--- a/docs/assets/css/ccc.css
+++ b/docs/assets/css/ccc.css
@@ -3339,6 +3339,11 @@ section.container.bciBannerImage.bciHandImage { padding-top: 0; }
   button.learnMoreButton { margin: 0; left: 0; display: inline-block; font-size: 2.5em; width: 50%; }
   button.learnMoreButton.callToAction { left: 50%; }
   #map-1 { order: 2; }
-  #map-2 { order: 2; } }
+  #map-2 { order: 2; }
+  /* in-person */
+  section.inPerson { padding-right: 0; }
+  .col-sm-6.leftWhite { background: white; }
+  .inPerson p { padding-right: 1em; }
+  #events { order: 2; } }
 
 /*# sourceMappingURL=ccc.css.map */
